# Limgrisen

./: .gitignore  README.md  config.sample.json  deploy.sh  flake.nix  node-packages.nix  package-lock.json  package.json  shell.nix
.github/workflows/: ci.yml
__tests__/commands/: challenge_spec.js  ctf_spec.js  mocks.js  ping_spec.js
limgris/: Cargo.toml
limgris/.sqlx/: query-04c68abbe0fb67c44edeee91d7e873842aa7b34c3507b5d7115b3baf971ba364.json  query-0f29b55dce0627c68849a65d17842cfb94728aaaa8a1f7412cd4ff9950b917d1.json  query-6801f06b7994a5b4020e11c2a2a40026d4593de8bf6f1a9946cb9362ccd926ce.json  query-702476a7470e9319f216cc587533b22bca9e1135ad9619fe323801abf829a2c5.json  query-8d3163e39c777a1d5cedde4646732cd003c2ba97bd1b28a587097c4276acfa8f.json  query-d6685da9e3ae557fb1bce336c8e8ffc2bfba00439ec6bfd9aa50b0e1d89b2648.json  query-dc75cf366af459fa7b52c6514291da2cca9c44b46ce8541525df16af41adc1ea.json  query-ed5161861a9d24be9602694ca359926e3944792d5afaf95c2aa012ed3b8a94c5.json  query-f37f580fa36f0ee1e4d07b1edf1eec9649b957ccd6bf2f35d9a9b8bef54e866e.json  query-f7abf98e63becb74ca093ffb999eec417fa6860bbb3094ecce3e9b69046251c4.json
limgris/migrations/: 20240425193017_laden.down.sql  20240425193017_laden.up.sql
limgris/src/: lib.rs  main.rs  types.rs
limgris/src/commands/: challenge.rs  ctf.rs  mod.rs
src/: config.js  ctf.js  database.js  deploy-commands.js  func.js  index.js  main.js  roles.js
src/commands/: challenge.js  ctf.js  hack_the_planet.js  hackerman.js  ping.js
