[package]
name = "limgris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.1"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
